--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *_files
 *.html
 
+# pdf
+/*/*.pdf
+!docs/*.pdf
+
 # History files
 .Rhistory
 .Rapp.history
@@ -28,8 +32,8 @@ vignettes/*.pdf
 .httr-oauth
 
 # knitr and R markdown default cache directories
-/*_cache/
-/cache/
+*/*_cache/
+*/cache/
 
 # Temporary files created by R markdown
 *.utf8.md
